--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,5 +10,8 @@
 <a class="nav-link" href="{{site.baseurl}}/issues.html">Issues</a>
 </li>
 <li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/profiles.html">Detained Activists</a>
+</li>
+<li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/about.html">About Us</a>
 </li>
