--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,5 +1,4 @@
-<nav id="navbar" class="collapse navbar-collapse">
-    <ul class="nav navbar-nav">
+    <ul class="nav-item">
         {% assign links = site.data.navigation %}
         {% for link in links %}
             {% assign class = nil %}
@@ -28,4 +27,3 @@
             {% endif %}
         {% endfor %}
     </ul>
-</nav>
