--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,14 +1,13 @@
 <!--  Replace menu links here -->
 
-      <li class="active"><a href="#">Home</a></li>
+      <li><a href="{{site.baseurl}}/news.html">News</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
+        <a class="dropdown-toggle" data-toggle="dropdown" href="{{site.baseurl}}/issues.html">Issues
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
+          <li><a href="{{site.baseurl}}/issues/jasic.html">Jasic</a></li>
+          <li><a href="{{site.baseurl}}/issues/silicosis.html">Silicosis</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="{{site.baseurl}}/detainees.html">Detained Activists</a></li>
+      <li><a href="{{site.baseurl}}/about.html">About Us</a></li>
