--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,7 @@
       </li>
       <li><a href="{{site.baseurl}}/detainees.html">Detained Activists</a></li>
       <li><a href="{{site.baseurl}}/about.html">About Us</a></li>
+      <li><a href="">1</a></li>
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 {% include search-lunr.html %}
