--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse" id="navbarColor02" style="">
-            <ul class="navbar-nav mr-auto d-flex align-items-center">
+            <ul class="nav navbar-nav">
       <li><a href="{{site.baseurl}}/news.html">News</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="{{site.baseurl}}/issues.html">Issues
@@ -56,7 +56,7 @@
       </li>
       <li><a href="{{site.baseurl}}/detainees.html">Detained Activists</a></li>
       <li><a href="{{site.baseurl}}/about.html">About Us</a></li>
-      <li><a href="">1</a></li>
+      <li><a href="">2</a></li>
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 {% include search-lunr.html %}
