--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,20 +44,20 @@
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse" id="navbarColor02" style="">
-            <ul class="nav navbar-nav">
-      <li><a href="{{site.baseurl}}/news.html">News</a></li>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="{{site.baseurl}}/issues.html">Issues
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="{{site.baseurl}}/issues/jasic.html">Jasic</a></li>
-          <li><a href="{{site.baseurl}}/issues/silicosis.html">Silicosis</a></li>
+          <li><a href="#">Page 1-1</a></li>
+          <li><a href="#">Page 1-2</a></li>
+          <li><a href="#">Page 1-3</a></li>
         </ul>
       </li>
-      <li><a href="{{site.baseurl}}/detainees.html">Detained Activists</a></li>
-      <li><a href="{{site.baseurl}}/about.html">About Us</a></li>
-      <li><a href="">2</a></li>
-            </ul>
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 {% include search-lunr.html %}
             </ul>
