--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="{{ site.baseurl }}/issues.html">Issues
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Issues
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Page 1-1</a></li>
