--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -2,7 +2,7 @@
 
       <li><a href="{{site.baseurl}}/news.html">News</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="{{site.baseurl}}/issues.html">Issues
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Issues
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="{{site.baseurl}}/issues/jasic.html">Jasic</a></li>
