--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,18 +45,17 @@
         </button>
         <div class="navbar-collapse collapse" id="navbarColor02" style="">
             <ul class="navbar-nav mr-auto d-flex align-items-center">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="{{ site.baseurl }}/news.html">News</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Issues
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
+          <li><a href="{{ site.baseurl }}/issues/jasic.html">Jasic</a></li>
+          <li><a href="{{ site.baseurl }}/issues/silicosis.html">Silicosis</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="{{ site.baseurl }}/detainees.html">Detained Activists</a></li>
+      <li><a href="{{ site.baseurl }}/about.html">About Us</a></li>
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 {% include search-lunr.html %}
