--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,17 +45,17 @@
         </button>
         <div class="navbar-collapse collapse" id="navbarColor02" style="">
             <ul class="navbar-nav mr-auto d-flex align-items-center">
-      <li class="active"><a href="{{ site.baseurl }}/news.html">News</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Issues
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="{{ site.baseurl }}/issues/jasic.html">Jasic</a></li>
-          <li><a href="{{ site.baseurl }}/issues/silicosis.html">Silicosis</a></li>
-        </ul>
-      </li>
-      <li><a href="{{ site.baseurl }}/detainees.html">Detained Activists</a></li>
-      <li><a href="{{ site.baseurl }}/about.html">About Us</a></li>
+              <li class="nav-item"><a href="{{ site.baseurl }}/news.html">News</a></li>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Issues
+                <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="{{ site.baseurl }}/issues/jasic.html">Jasic</a></li>
+                  <li><a href="{{ site.baseurl }}/issues/silicosis.html">Silicosis</a></li>
+                </ul>
+              </li>
+              <li class="nav-item"><a href="{{ site.baseurl }}/detainees.html">Detained Activists</a></li>
+              <li class="nav-item"><a href="{{ site.baseurl }}/about.html">About Us</a></li>
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 {% include search-lunr.html %}
