--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
         </button>
         <div class="navbar-collapse collapse" id="navbarColor02" style="">
             <ul class="navbar-nav mr-auto d-flex align-items-center">
-              <li class="nav-item"><a href="{{ site.baseurl }}/news.html">News</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/news.html">News</a></li>
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Issues
                 <span class="caret"></span></a>
@@ -54,8 +54,9 @@
                   <li><a href="{{ site.baseurl }}/issues/silicosis.html">Silicosis</a></li>
                 </ul>
               </li>
-              <li class="nav-item"><a href="{{ site.baseurl }}/detainees.html">Detained Activists</a></li>
-              <li class="nav-item"><a href="{{ site.baseurl }}/about.html">About Us</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/detainees.html">Detained Activists</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/about.html">About Us</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/about.html">1</a></li>
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 {% include search-lunr.html %}
