--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
             <ul class="navbar-nav mr-auto d-flex align-items-center">
               <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/news.html">News</a></li>
               <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Issues
+                <a  class="nav-link" data-toggle="dropdown" href="#">Issues
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="{{ site.baseurl }}/issues/jasic.html">Jasic</a></li>
