--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,8 +49,8 @@
               <li class="dropdown">
                 <a  class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Issues<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="{{ site.baseurl }}/issues/jasic.html">Jasic</a></li>
-                  <li><a href="{{ site.baseurl }}/issues/silicosis.html">Silicosis</a></li>
+                  <li><a class="dropdown-item" href="{{ site.baseurl }}/issues/jasic.html">Jasic</a></li>
+                  <li><a class="dropdown-item" href="{{ site.baseurl }}/issues/silicosis.html">Silicosis</a></li>
                 </ul>
               </li>
               <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/detainees.html">Detained Activists</a></li>
