--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -116,7 +116,7 @@ a.text-dark:hover {
 	border-color:transparent;
 }
 .btn-link.btn-secondary {
-	color:#7832e2;
+	color:#ff8533;
 	border-color:transparent;
 }
 .btn-link.btn-success {
