--- a/_includes/sidebar-featured.html
+++ b/_includes/sidebar-featured.html
@@ -1,21 +1,4 @@
 <div class="sticky-top sticky-top-offset">
-    <h4 class="font-weight-bold spanborder"><span>Featured</span></h4>  
-    <ol class="list-featured">				
-        {% for post in site.tags.featured %}                
-            <li class="mb-4">
-            <span>
-                <h6 class="font-weight-bold">
-                    <a href="{{site.baseurl}}{{ post.url }}" class="text-dark">{{ post.title }}</a>
-                </h6>
-                <span class="d-block text-muted">
-                    In <span class="catlist">
-                    {% for category in post.categories %}
-                    <a class="text-capitalize text-muted smoothscroll" href="{{site.baseurl}}/categories.html#{{ category | downcase }}">{{ category }}</a><span class="sep">, </span>
-                    {% endfor %}
-                    </span>
-                </span>
-            </span>
-            </li>                
-        {% endfor %}   
-    </ol>
+    <h4 class="font-weight-bold spanborder"><span>About Us</span></h4>  
+    <div>From mid-2018 onwards, and continuing through 2019, China has conducted a massive crackdown on its domestic labor movement. Beginning with the repression of the explosive Jasic campaign, where workers fired for attempting to form a trade union attracted support from leftist students around the country, the crackdown has expanded into a wide-reaching sweep of labor activists around the country.  Since July 2018, over 130 labor activists have been detained, questioned or disappeared by the authorities. Over 50 of these activists are still in custody or missing. The crackdown has affected activists ranging from worker organizers, leftist students, and labor NGO staff to social workers and even grassroots level ACFTU staff.</div>
 </div> 
