--- a/_includes/sidebar-featured.html
+++ b/_includes/sidebar-featured.html
@@ -1,9 +1,9 @@
 <div class="sticky-top sticky-top-offset">
     <h4 class="font-weight-bold spanborder"><span>About Us</span></h4>  
     <div>
-  From mid-2018 onwards, and continuing through 2019, China has conducted a massive crackdown on its domestic labor movement. Beginning with the repression of the explosive Jasic campaign, where workers fired for attempting to form a trade union attracted support from leftist students around the country, the crackdown has expanded into a wide-reaching sweep of labor activists around the country.  Since July 2018, over 130 labor activists have been detained, questioned or disappeared by the authorities. Over 50 of these activists are still in custody or missing. The crackdown has affected activists ranging from worker organizers, leftist students, and labor NGO staff to social workers and even grassroots level ACFTU staff.
-  
-  
+  From mid-2018 onwards, and continuing through 2019, China has conducted a massive crackdown on its domestic labor movement. Beginning with the repression of the explosive Jasic campaign, the crackdown has expanded into a wide-reaching sweep of labor activists across the country. Since July 2018, over 130 labor activists have been detained, questioned or disappeared by the authorities. Over 50 of these activists are still missing or in custody. Targets have ranged from worker organizers, leftist students, and labor NGO staff to social workers and even grassroots-level ACFTU staff.
+    </div>
+    <div>
   The China Labor Crackdown Concern Group was formed by Chinese and international NGOs and concerned individuals to continue to monitor the situation of the crackdown and promote international attention to the shrinking space for labor activism in China.
     </div>
 </div> 
