--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,13 @@
               <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/activists.html">Activists</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/resources.html">Resources</a></li>
                 
-              {% assign posts=site.posts | where:"i18n-link", page.i18n-link | sort: 'lang' %}
+              {% assign posts=site.posts | where:"lang-ref", page.lang-ref | sort: 'lang' %}
               {% if posts.size == 0 %}
-                {% assign posts=site.pages | where:"i18n-link", page.i18n-link | sort: 'lang' %}
+                {% assign posts=site.pages | where:"lang-ref", page.lang-ref | sort: 'lang' %}
               {% endif %}
 
               <li class="dropdown">
-                <a  class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Issues<span class="caret"></span></a>
+                <a  class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">{{ page.lang }}<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   {% for post in posts %}
                     <li><a class="dropdown-item" href="{{ site.base-url }}{{ post.url }}">{{ site.data.languages[post.lang].label }}</a></li>
