--- a/_includes/sidebar-about.html
+++ b/_includes/sidebar-about.html
@@ -4,6 +4,6 @@
   From mid-2018 onwards, and continuing through 2019, China has conducted a massive crackdown on its domestic labor movement. Beginning with the repression of the explosive Jasic campaign, the crackdown has expanded into a wide-reaching sweep of labor activists across the country. Since July 2018, over 130 labor activists have been detained, questioned or disappeared by the authorities. Over 50 of these activists are still missing or in custody. Targets have ranged from worker organizers, leftist students, and labor NGO staff to social workers and even grassroots-level ACFTU staff.
     </div>
     <div>
-  The China Labor Crackdown Concern Group was formed by Chinese and international NGOs and concerned individuals to continue to monitor the situation of the crackdown and promote international attention to the shrinking space for labor activism in China.
+  The China Labor Crackdown Concern Group was formed by Chinese and international concerned individuals to continue to monitor the situation of the crackdown and promote international attention to repression of the labor movement in China.
     </div>
 </div> 
