--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 
 <nav id="MagicMenu" class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="{{ site.baseurl }}/index.html"><strong>{{ site.data.translations['sitename'][page.lang] }}</strong></a>
+        <a class="navbar-brand" href="{{ site.baseurl }}{{ site.data.languages[post.lang].suffix }}/index.html"><strong>{{ site.data.translations['sitename'][page.lang] }}</strong></a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
