--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
         <div class="navbar-collapse collapse" id="navbarColor02" style="">
             <ul class="navbar-nav mr-auto d-flex align-items-center">
               <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/news{{ site.data.languages[page.lang].suffix }}.html">{{ site.data.translations['news'][page.lang] }}</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/support{{ site.data.languages[page.lang].suffix }}.html">{{ site.data.translations['support'][page.lang] }}</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/activists{{ site.data.languages[page.lang].suffix }}.html">{{ site.data.translations['activists'][page.lang] }}</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ site.baseurl }}/resources{{ site.data.languages[page.lang].suffix }}.html">{{ site.data.translations['resources'][page.lang] }}</a></li>
                 
