--- a/_includes/sidebar-featured-zh.html
+++ b/_includes/sidebar-featured-zh.html
@@ -1,9 +1,9 @@
 <div class="sticky-top sticky-top-offset">
     <h4 class="font-weight-bold spanborder"><span>关于我们</span></h4>  
     <div>
-    由2018年年中至今，中国开启了一波对本地工运的广泛打压。打压由佳士一场具体斗争的打压，扩散为全国各地对工运人士的打压。自2018年7月，由超过130名工运人士被拘留、传唤或失踪。仍有超过50名工运人士仍失联或被关押。打压对象包含工人组织者，左翼学生，劳工组织职员，社工，甚至基层工会工作人员。
+    由2018年年中至今，中国开启了一波对本地工运的广泛打压。打压由佳士一场具体斗争的打压，扩散为全国各地对工运人士的打压。自2018年7月，由超过130名工运人士被拘留、传唤或失踪。仍有超过50名工运人士仍失联或被关押。打压对象包含工人组织者，左翼学生，劳工机构职员，社工，甚至基层工会工作人员。
     </div>
     <div>
-中国工运人士关注组由中国与国际的关注者成立，旨在持续跟进打压的情况以及吸引国际社会关注中国工运的打压。
+「中国工运人士关注组」由中国与国际的关注者成立，旨在持续跟进打压的情况以及吸引国际社会关注中国工运的打压。
     </div>
 </div> 
