--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
               {% endif %}
 
               <li class="dropdown">
-                <a  class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">{{ page.lang }}<span class="caret"></span></a>
+                <a  class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">{{ site.data.languages[page.lang].label }}<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   {% for post in posts %}
                     <li><a class="dropdown-item" href="{{ site.base-url }}{{ post.url }}">{{ site.data.languages[post.lang].label }}</a></li>
